--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -13,4 +13,4 @@
     command : sudo systemctl start docker
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8083:8082 iamfaizanali/syed_bankapp:latest
+    command: docker run -itd -p 8084:8082 iamfaizanali/bank-auto:latest
